# compact-multigrid

./: README.md  pyproject.toml
assets/map/: ctf_1v1.txt
compact-mutigrid/envs/: base.py
compact-mutigrid/typing/: metadata.py
compact_multigrid/: __init__.py  utils.py
compact_multigrid/envs/: __init__.py  base.py
compact_multigrid/envs/ctf/: 1v1.py  __init__.py  base.py  base_ctf.py  ctf_1v1.py
compact_multigrid/policy/: probablistic.py  utils.py
compact_multigrid/typing/: __init__.py  field.py  info.py  metadata.py
tests/: test_ctf.py  test_utils.py
