[tool.poetry]
name = "compact-multigrid"
version = "0.1.0"
description = "Base Gymnasium environment for multirgrid environments with location-based compact observation representations."
authors = ["Mikihisa Yuasa <myuasa2@illinois.edu>"]
license = "MIT"
readme = "README.md"
packages = [{include = "compact_multigrid"}]

[tool.poetry.dependencies]
python = "^3.10"
gymnasium = ">=0.27"
matplotlib = "^3.7.1"
jax = {extras = ["cuda12-pip"], version = "^0.4.10"}
seaborn = "^0.12.2"


[[tool.poetry.source]]
name = "jax"
url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
default = false
secondary = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
